<?xml version="1.0" encoding="utf-8"?><!-- This DrawerLayout has two children at the root  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:background="@drawable/side_nav_bar"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:contentDescription="@string/app_name"
                android:id="@+id/imageView" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/app_name"
                android:textSize="@dimen/size_menu"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/versionApp" />

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_below="@+id/header"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/upgrade"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/premium"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/no_ads"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/restart"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/restart"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:text="@string/restart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/policy"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/policy"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/policy"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/moreApp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/more_app"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/more_app"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rate"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/rate"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/rating"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/share_item"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/share"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/facebook"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/facebook"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/facebook"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/instagram" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/instagram"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/twitter"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/twitter"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/twitter"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/pinterest"
                android:layout_marginBottom="60dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/pinterest"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_menu"
                    android:text="@string/pinterest"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>